# fix-me

./: .gitignore  .npmrc  .prettierignore  .prettierrc.json  Cargo.toml  README.md  dprint.json  eslint.config.js  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  rustfmt.toml  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.vue  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  command.rs  error.rs  http.rs  lib.rs  llm.rs  main.rs  manager.rs  migration.rs  plugin.rs  tray.rs  window.rs
src/assets/: index.css
src/assets/style/: base.css  main.css
src/lib/: error.ts  prototype.ts  updater.ts  utils.ts
src/lib/api/: bindings.ts  index.ts
src/lib/components/: sidebar.svelte  switch.svelte  textarea.svelte
src/lib/components/sidebar/: index.ts  sidebar-footer.svelte  sidebar.svelte
src/lib/components/ui/badge/: badge.svelte
src/lib/components/ui/sidebar/: sidebar-provider.svelte
src/lib/stores/: history.svelte.ts  history.ts  prompt.svelte.ts  prompt.ts  settings.ts
src/router/: index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/history/: +page.svelte
src/routes/settings/: +page.svelte
src/stores/: history.ts  prompt.ts  settings.ts
src/types/: global.d.ts  index.d.ts
src/views/criteria/: index.vue
src/views/history/: index.vue
src/views/home/: index.vue
src/views/settings/: index.vue
