[package]
name = "fix-me"
version = "2.1.7"
publish = false

[package.authors]
workspace = true

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lints]
workspace = true

[build-dependencies.tauri-build]
version = "2.2"
features = []

[dependencies]
anyhow = "1.0"
futures = "0.3"
http = "1.3"
itertools = "0.14"
serde_json = "1.0"
specta-typescript = "=0.0.9"
tauri-plugin-clipboard-manager = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-process = "2.2"
tauri-plugin-single-instance = "2.2"
tauri-plugin-window-state = "2.2"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.specta]
version = "=2.0.0-rc.22"
features = ["serde", "serde_json"]

[dependencies.strum]
version = "0.27"
features = ["derive"]

[dependencies.tauri]
version = "~2.5"
features = ["image-png", "protocol-asset", "rustls-tls", "tray-icon"]

[dependencies.tauri-plugin-pinia]
version = "3.7"
features = ["unstable-migration"]

[dependencies.tauri-plugin-prevent-default]
version = "2.1"
features = ["unstable-windows"]

[dependencies.tauri-specta]
version = "=2.0.0-rc.21"
features = ["derive", "typescript"]

[dependencies.tokio]
version = "1.45"
features = ["full"]
