[package]
name = "fix-me"
version = "3.1.0"
publish = false

[package.authors]
workspace = true

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
futures = "0.3"
http = "1.4"
itertools = "0.14"
serde_json = "1.0"
specta-typescript = "=0.0.9"
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-dialog = "2.4"
tauri-plugin-process = "2.3"
tauri-plugin-single-instance = "2.3"
tauri-plugin-updater = "2.9"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.specta]
version = "=2.0.0-rc.22"
features = ["serde", "serde_json"]

[dependencies.strum]
version = "0.27"
features = ["derive"]

[dependencies.tauri]
version = "2.9"
features = ["protocol-asset", "rustls-tls"]

[dependencies.tauri-plugin-pinia]
version = "4"
features = ["marshaler-toml"]

[dependencies.tauri-plugin-prevent-default]
version = "4"
features = ["platform-windows"]

[dependencies.tauri-specta]
version = "=2.0.0-rc.21"
features = ["derive", "typescript"]

[dependencies.tokio]
version = "1.48"
features = ["full"]

[build-dependencies.tauri-build]
version = "2.5"
features = []
